tests/error/result_errors/state_result_not_qubit.err
Error: Type mismatch (at $FILE:6:24)
  | 
4 | @compile_guppy
5 | def main(x: int) -> None:
6 |     state_result("tag", x)
  |                         ^ Expected expression of type `qubit`, got `int`

Guppy compilation failed due to 1 previous error
